<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/rank"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="88"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="@dimen/profile_size"
        android:layout_height="@dimen/profile_size"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/rank"
        android:src="@mipmap/ic_sword">

    </ImageView>

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/profile"
        android:text="@string/default_display_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/displayName"
        android:layout_below="@+id/displayName"
        android:text="@string/default_level"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/verses_memorized_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/level"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/verses_memorized_text"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/verses_memorized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/verses_memorized_text"
        android:layout_below="@+id/verses_memorized_text"
        android:text="@string/default_verses_memorized"
        android:textSize="18sp" />

</RelativeLayout>
