<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.code.codemercenaries.girdthysword.Fragments.HomeFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_grey">

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="auto"
        android:visibility="visible"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@android:drawable/ic_menu_more" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="83dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="auto"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="auto"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/tv_delete"
        fontPath="@string/notosans_eng_black_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="142dp"
        android:layout_marginEnd="73dp"
        android:background="#A0ffffff"
        android:gravity="end|center_vertical"
        android:text="@string/delete_section"
        android:visibility="visible"
        app:layout_anchorGravity="bottom|right"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/tv_add"
        fontPath="@string/notosans_eng_black_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="95dp"
        android:layout_marginEnd="73dp"
        android:background="#A0ffffff"
        android:fadingEdge="vertical"
        android:gravity="end|center_vertical"
        android:text="@string/add_section"
        android:visibility="visible"
        app:layout_anchorGravity="bottom|right"
        tools:ignore="MissingPrefix" />

</FrameLayout>
