<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="60dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/title_activity_answer"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="com.code.codemercenaries.girdthysword.Activities.AnswerScreenActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/sample_question"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="2sp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/sample_answer"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="120dp"
                android:contentDescription="Image"
                app:srcCompat="@drawable/custom_border2" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Button1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Button2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Button3" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
